--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,36 @@
 *.o
+images
+cache_images
 inspect
 add_random_colors
 bbox
 group_shapes_on_unique_set_id
 produce_single_test_circle
-read_mysql_line_strips
+read_mysql
+read_mysql.sql.log
 read_mysql_shapes
+read_mysql_line_strips
 read_shapefile
+reduce_by_id
 reduce_by_distance
+reduce_by_attribute
 tesselate
 write_bmp
-write_kml
-coordinate_convert
-reduce_by_id
 write_bmp_sphere
+write_png
+write_kml
+write_json
+coordinate_convert
+add_color
+add_color_from_mysql
+clip
+convert_to_voronoi
+pass_through
+produce_random_data
+produce_unit_circle
+produce_unit_square
 civicsets.ca
+output.png
 a.out
 *.dbf
 *.shp
