--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ add_color_from_csv
 bbox
 group_shapes_on_unique_set_id
 produce_single_test_circle
+read_dem
 read_mysql
 read_mysql.sql.log
 read_mysql_shapes
@@ -35,8 +36,13 @@ produce_unit_square
 civicsets.ca
 output.png
 a.out
+*.prj
+*.sbx
+*.sbn
 *.dbf
 *.shp
 *.shx
 *.kml
 *.bmp
+*.png
+*.binary
