update gitignore first

--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,1 @@
-ruby/Makefile
-ruby/Pipes.bundle
-*.o
-030/*
-images
-cache_images
-inspect
-add_random_colors
-add_color_from_csv
-bbox
-group_shapes_on_unique_set_id
-produce_single_test_circle
-read_dem
-read_dwg
-read_mysql
-read_mysql.sql.log
-read_mysql_shapes
-read_mysql_line_strips
-read_shapefile
-reduce_by_id
-reduce_by_distance
-reduce_by_attribute
-tesselate
-transform
-write_bmp
-write_bmp_sphere
-write_png
-write_kml
-write_json
-coordinate_convert
-add_attribute
-add_color
-add_color_from_mysql
-clip
-convert_to_voronoi
-pass_through
-produce_random_data
-produce_unit_circle
-produce_unit_square
-civicsets.ca
-output.png
-a.out
-*.prj
-*.sbx
-*.sbn
-*.dbf
-*.shp
-*.shx
-*.kml
-*.bmp
-*.png
-*.binary
+bin/*
