added const to a lot of char * function prototypes - added get functions for attributes, added in functions directory and some general inout functions like unique, offset and normalize

--- a/block/Makefile
+++ b/block/Makefile
@@ -25,6 +25,7 @@ kevin: \
 	kevin/add_color_to_addresses_tickets_by_wday_and_time \
 	kevin/add_distance_to_nearest_neighbour \
 	kevin/add_edge_to_street \
+	kevin/move_to_nearest_street \
 	kevin/host_ticket_data \
 	kevin/add_address_id_and_is_opp \
 	kevin/test
@@ -40,6 +41,9 @@ kevin/add_distance_to_nearest_neighbour: bin/block.o bin/block_kdtree.o kevin/ad
 
 kevin/add_edge_to_street: bin/block.o bin/block_kdtree.o kevin/add_edge_to_street.c
 	g++ -lm bin/block.o kevin/add_edge_to_street.c bin/block_kdtree.o -o kevin/add_edge_to_street
+
+kevin/move_to_nearest_street: bin/block.o bin/block_kdtree.o kevin/move_to_nearest_street.c
+	g++ -lm bin/block.o kevin/move_to_nearest_street.c bin/block_kdtree.o -o kevin/move_to_nearest_street
 
 kevin/host_ticket_data: bin/block.o bin/block_kdtree.o ext/mongoose.c kevin/host_ticket_data.c
 	g++ -lm -lpthread -ldl bin/block.o bin/block_kdtree.o ext/mongoose.c kevin/host_ticket_data.c -o kevin/host_ticket_data
